--- a/roles/strongswan/templates/ipsec.secrets.j2
+++ b/roles/strongswan/templates/ipsec.secrets.j2
@@ -1,3 +1,3 @@
-{% for host in play_hosts %}
-: RSA {{ hostvars[host]['inventory_hostname'] }}-hostKey.pem
-{% endfor %}
+: RSA {{ inventory_hostname }}-hostKey.pem
+
+
